# quickstart-cmake

./: README.md
sdl2-window/: CMakeLists.txt  main.cpp
